--- a/src/App.css
+++ b/src/App.css
@@ -101,8 +101,9 @@
 .header h1 {
   color: white;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  -webkit-text-stroke: 2.4px black;
-  font-size: 3rem;
+  -webkit-text-stroke: 1.6px black;
+  letter-spacing: 3px;
+  font-size: 2rem;
 }
 
 .footer {
